# kucoin_arbitrage

./: .gitignore  Cargo.toml  LICENSE  README.md  config.ini.sample  config_sample.toml
.github/workflows/: rust.yml
src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  mirror.rs  shared.rs  strings.rs  system_event.rs  tasks.rs  tickers.rs
src/broker/: mod.rs
src/broker/gatekeeper/: exchangelimit.rs  kucoin.rs  mod.rs
src/broker/order/: kucoin.rs  mod.rs
src/broker/orderbook/: internal.rs  kucoin.rs  mod.rs
src/broker/orderchange/: kucoin.rs  mod.rs
src/broker/strategy/: all_taker.rs  all_taker_btc_usd.rs  all_taker_btc_usdt.rs  mod.rs
src/broker/symbol/: filter.rs  kucoin.rs  mod.rs
src/broker/trade/: kucoin.rs
src/event/: api.rs  chance.rs  mod.rs  order.rs  orderbook.rs  orderchange.rs  trade.rs
src/global/: config.rs  counter_helper.rs  mod.rs  orderbook.rs  performance.rs  task.rs
src/globals/: config.rs  envionment.rs  mod.rs  orderbook.rs  performance.rs  symbol.rs  test_broadcast.rs
src/globals/legacy/: broadcast.rs  mod.rs  orderbook.rs
src/model/: chance.rs  config.rs  mod.rs  order.rs  orderbook.rs  performance.rs  symbol.rs  trade.rs
src/monitor/: counter.rs  counter_helper.rs  mod.rs  task.rs  timer.rs
src/strategy/: all_taker.rs  all_taker_btc_usd.rs  mod.rs  triangular.rs
src/translator/: binance.rs  kucoin.rs  mod.rs  traits.rs  translator.rs
